--- a/PORTFOLIOREPOLYO.html
+++ b/PORTFOLIOREPOLYO.html
@@ -11,7 +11,7 @@
 
     .main {
       width: 100%;
-      background: url("https://scontent.xx.fbcdn.net/v/t1.15752-9/413801369_1377559246464890_8997404234619667219_n.jpg?stp=dst-jpg_p403x403&_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeHOvqDO7R0Spdg0wKezcPWYWJgyzPENYypYmDLM8Q1jKgP5wIGYZoTKZGQkMkWp7WkbhVyKJz6fBf_xbL7oWOlK&_nc_ohc=asWocb1tro8AX_mCCod&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTdV8BVVGKtLqH5ynWI_DyepH91jxFOtG0kHI6inxknvg&oe=6620A3A8");
+      background: url("https://scontent.xx.fbcdn.net/v/t1.15752-9/430788972_1493434371204410_7267021349723225959_n.png?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeHz35LXHj1jk-9X1OJwtRbTzro1FBl2JxzOujUUGXYnHB5AO1TNVGDATpYnsCuhMHIsXOMrbmFdSW91ZtltW04B&_nc_ohc=SXENPP_q5NoAX-oj7lq&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRjo8aMEee_fI8dva7daqAO6RamRkfsu3auPfrRuDyA_A&oe=6620D504") no-repeat;
       background-position: center;
       background-size: cover;
       height: 100vh;
