--- a/PORTFOLIOREPOLYO.html
+++ b/PORTFOLIOREPOLYO.html
@@ -156,7 +156,7 @@
   </div>
 
   <div class="image">
-    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/430634994_844820264351412_5795962355842283341_n.png?stp=dst-png_s403x403&_nc_cat=100&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeEyQiK9P1_EhUafBcqUHcnpI_1HEcP6UzIj_UcRw_pTMuS6bDBblAf_n7w1LWSKADfaaAbS4XHlAfPqi5Xnvco3&_nc_ohc=HF9n_wF-ceAAX_hkKMx&_nc_oc=AdgRw_KuC5lAGdtqDQ_IS-VPrtBbUFT3AXIzn4a-rYqgW4YsANHD0DsPJFO5xqlTBNOPKReUGSqoNJj6rO3u2keb&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRiQ4S_LfTUTBFfYfdIBQSoHh2d4hpQ54SD_NQjyGrByw&oe=6620A5CB" class="nashdoctor">
+    <img src="https://scontent.fmnl4-5.fna.fbcdn.net/v/t1.15752-9/430788972_1493434371204410_7267021349723225959_n.png?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeHz35LXHj1jk-9X1OJwtRbTzro1FBl2JxzOujUUGXYnHB5AO1TNVGDATpYnsCuhMHIsXOMrbmFdSW91ZtltW04B&_nc_ohc=SXENPP_q5NoAX_mReNf&_nc_ht=scontent.fmnl4-5.fna&oh=03_AdRnV6IwJXbwyJMIMTVxdm4mprPHSXKOfLv_njhE7GuRLA&oe=6620D504">
   </div>
 
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
