--- a/PORTFOLIOREPOLYO.html
+++ b/PORTFOLIOREPOLYO.html
@@ -156,7 +156,7 @@
   </div>
 
   <div class="image">
-    <img src="https://scontent.fmnl4-5.fna.fbcdn.net/v/t1.15752-9/430788972_1493434371204410_7267021349723225959_n.png?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeHz35LXHj1jk-9X1OJwtRbTzro1FBl2JxzOujUUGXYnHB5AO1TNVGDATpYnsCuhMHIsXOMrbmFdSW91ZtltW04B&_nc_ohc=SXENPP_q5NoAX_mReNf&_nc_ht=scontent.fmnl4-5.fna&oh=03_AdRnV6IwJXbwyJMIMTVxdm4mprPHSXKOfLv_njhE7GuRLA&oe=6620D504">
+    <img src="https://scontent.fmnl4-5.fna.fbcdn.net/v/t1.15752-9/430788972_1493434371204410_7267021349723225959_n.png?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeHz35LXHj1jk-9X1OJwtRbTzro1FBl2JxzOujUUGXYnHB5AO1TNVGDATpYnsCuhMHIsXOMrbmFdSW91ZtltW04B&_nc_ohc=SXENPP_q5NoAX_mReNf&_nc_ht=scontent.fmnl4-5.fna&oh=03_AdRnV6IwJXbwyJMIMTVxdm4mprPHSXKOfLv_njhE7GuRLA&oe=6620D504" class="logo">
   </div>
 
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
