--- a/PORTFOLIOREPOLYO.html
+++ b/PORTFOLIOREPOLYO.html
@@ -147,7 +147,7 @@
     <h3>Hi I'm <span>Nash Eicker</span></h3>
     <h1>Feeling <span>W</span>eb <span>D</span>esigner</h1>
     <h3>Feeling Web Designer From Iloilo, Philippines</h3>
-    <a class="please-love-me" href="#">Please Love Me</a>
+    <a class="please-love-me" href="https://www.facebook.com/NashEickerr">Please Love Me</a>
     <div class="icons">
       <a href="https://www.facebook.com/NashEickerr"><ion-icon name="logo-Facebook"></ion-icon></a>
       <a href="https://www.instagram.com/nsh_eicker/"><ion-icon name="logo-Instagram"></ion-icon></a>
