--- a/CONTACT FORM.html
+++ b/CONTACT FORM.html
@@ -15,6 +15,8 @@ body
 {
   font-family: Arial,sans-serif;
   background: linear-gradient(#ffdad5, #fff7f9);
+  background: url(Images/wallpaperflare.com_wallpaper.jpg) no-repeat center center fixed;
+  background-size: cover;
 }
 
 .Contact-Container
