--- a/CONTACT FORM.html
+++ b/CONTACT FORM.html
@@ -15,7 +15,7 @@ body
 {
   font-family: Arial,sans-serif;
   background: linear-gradient(#ffdad5, #fff7f9);
-  background: url(Images/wallpaperflare.com_wallpaper.jpg) no-repeat center center fixed;
+  background: url(https://c4.wallpaperflare.com/wallpaper/535/845/69/digital-art-artwork-fantasy-art-planet-sun-hd-wallpaper-preview.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
