--- a/Happy Birthday 2.html
+++ b/Happy Birthday 2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <title>Happy Birthday</title>
+      <title>Open lang bla</title>
      <style>
 
 body
