--- a/Music Audio.html
+++ b/Music Audio.html
@@ -62,7 +62,7 @@ body
   <body>
     <div class="player">
       <div class="imgBox">
-        <img src="Images/IRIS.jpeg">
+        <img src="https://i.pinimg.com/564x/ea/6f/52/ea6f521c64f6cd3e88b0bd39b2c7cb0c.jpg">
       </div>
       <audio controls>
         <source src="/audio/Goo Goo Dolls  Iris [Official Music Video] [4K Remaster].mp3" type="audio/mp3"/>
