--- a/Music Audio.html
+++ b/Music Audio.html
@@ -60,11 +60,10 @@
 <body>
   <div class="player">
     <div class="imgBox">
-      <img src="IRIS.jpg" alt="IRIS">
+      ![Alt Text](IRIS.jpg)
     </div>
     <audio controls>
-      <source src="Goo Goo Dolls Iris [Official Music Video] [4K Remaster].mp3" type="audio/mp3">
-      Your browser does not support the audio element.
+      <[Download Audio File](Goo Goo Dolls  Iris [Official Music Video] [4K Remaster].mp3)
     </audio>
   </div>
 </body>
