--- a/Music Audio.html
+++ b/Music Audio.html
@@ -1,70 +1,72 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music Player</title>
-  <style>
-    *
-    {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+    content="width=device-width,
+    initial-scale=1.0">
+    <title>Music Player</title>
+    <style>
+      *
+{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    body
-    {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      background: #108dc7;  
-      background: -webkit-linear-gradient(to right, #ef8e38, #108dc7); 
-      background: linear-gradient(to right, #ef8e38, #108dc7); 
-    }
+body
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #108dc7;  
+  background: -webkit-linear-gradient(to right, #ef8e38, #108dc7); 
+  background: linear-gradient(to right, #ef8e38, #108dc7); 
+}
 
-    .player
-    {
-      position: relative;
-      width: 350px;
-      background: #f1f3f4;
-      box-shadow: 0 50px 80px rgba(0,0,0,0.5);
-      border-radius: 10px;
-    }
+.player
+{
+  position: relative;
+  width: 350px;
+  background: #f1f3f4;
+  box-shadow: 0 50px 80px rgba(0,0,0,0.5);
+  border-radius: 10px;
+}
 
-    .player .imgBox
-    {
-      position: relative;
-      width: 100%;
-      height: 350px;
-    }
+.player .imgBox
+{
+  position: relative;
+  width: 100%;
+  height: 350px;
+}
 
-    .player .imgBox img
-    {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 10px 0 0;
-    }
+.player .imgBox img
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px 0 0;
+}
 
-    .player audio
-    {
-      width: 100%;
-      outline: none;
-    }
-  </style>
-</head>
-<body>
-  <div class="player">
-    <div class="imgBox">
-      ![Alt Text](IRIS.jpg)
+.player audio
+{
+  width: 100%;
+  outline: none;
+}
+    </style>
+  </head>
+  <body>
+    <div class="player">
+      <div class="imgBox">
+        <img src="https://i.pinimg.com/564x/ea/6f/52/ea6f521c64f6cd3e88b0bd39b2c7cb0c.jpg">
+      </div>
+      <audio controls>
+        <source src="/audio/Goo Goo Dolls  Iris [Official Music Video] [4K Remaster].mp3" type="audio/mp3"/>
+      </audio>
     </div>
-    <audio controls>
-      <[Download Audio File](Goo Goo Dolls  Iris [Official Music Video] [4K Remaster].mp3)
-    </audio>
-  </div>
-</body>
+  </body>
 </html>
