--- a/Music Audio.html
+++ b/Music Audio.html
@@ -60,10 +60,10 @@
 <body>
   <div class="player">
     <div class="imgBox">
-      <img src="IRIS.jpg" alt="IRIS">
+      <img src="assets/IRIS.jpg" alt="IRIS">
     </div>
     <audio controls>
-      <source src="Goo Goo Dolls Iris [Official Music Video] [4K Remaster].mp3" type="audio/mp3">
+     <source src="assets/Goo Goo Dolls Iris [Official Music Video] [4K Remaster].mp3" type="audio/mp3">
       Your browser does not support the audio element.
     </audio>
   </div>
