--- a/Music Audio.html
+++ b/Music Audio.html
@@ -60,14 +60,14 @@
 <body>
   <div class="player">
     <div class="imgBox">
-      <img src="assets/IRIS.jpg" alt="IRIS">
-    </div>
-    
-     <audio controls>
-  <source src="FR MUSIC AUDIO/Goo Goo Dolls  Iris [Official Music Video] [4K Remaster].mp3" type="audio/mp3"/>
+     <div class="imgBox">
+  <img src="assets/IRIS.jpg" alt="IRIS">
+</div>
+
+<audio controls>
+  <source src="assets/FR MUSIC AUDIO/Goo Goo Dolls  Iris [Official Music Video] [4K Remaster].mp3" type="audio/mp3"/>
 </audio>
 
-    </audio>
   </div>
 </body>
 </html>
