--- a/Music.html
+++ b/Music.html
@@ -64,10 +64,10 @@
   <body>
     <div class="player">
       <div class="imgBox">
-        <img src="Images/image--4p2trYGS-transformed.png">
+      <img src="https://raw.githubusercontent.com/N4sshh/Nasshh/main/image--4p2trYGS-transformed.png" alt="Placeholder Image">
       </div>
       <audio controls>
-       <source src="audio/The Walters -- I Love You So.mp3">
+       <source src="https://raw.githubusercontent.com/N4sshh/Nasshh/main/audio/The%20Walters%20--%20I%20Love%20You%20So.mp3" type="audio/mp3">
       </audio>
     </div>
   </body>
