--- a/Music.html
+++ b/Music.html
@@ -66,9 +66,10 @@
       <div class="imgBox">
       <img src="https://raw.githubusercontent.com/N4sshh/Nasshh/main/image--4p2trYGS-transformed.png" alt="Placeholder Image">
       </div>
-      <audio controls>
-       <source src="https://raw.githubusercontent.com/N4sshh/Nasshh/main/The%20Walters%20--%20I%20Love%20You%20So.mp3" type="audio/mp3">
-      </audio>
+     <audio controls>
+  <source src="The Walters -- I Love You So.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+     </audio>
     </div>
   </body>
 </html>
