--- a/Music Audio.html
+++ b/Music Audio.html
@@ -65,7 +65,7 @@
 </div>
 
 <audio controls>
-  <source src="assets/FR MUSIC AUDIO/Goo Goo Dolls  Iris [Official Music Video] [4K Remaster].mp3" type="audio/mp3"/>
+  <source src="Goo Goo Dolls  Iris [Official Music Video] [4K Remaster].mp3" type="audio/mp3"/>
 </audio>
 
   </div>
