--- a/Music Audio.html
+++ b/Music Audio.html
@@ -61,7 +61,7 @@
   <div class="player">
     <div class="imgBox">
      <div class="imgBox">
-  <img src="assets/IRIS.jpg" alt="IRIS">
+  <img src="IRIS.jpeg" alt="IRIS">
 </div>
 
 <audio controls>
