--- a/Music.html
+++ b/Music.html
@@ -21,9 +21,9 @@
   align-items: center;
   min-height: 100vh;
   background: #108dc7;  
-  background: #F3904F; 
-  background: -webkit-linear-gradient(to right, #3B4371, #F3904F);  
-  background: linear-gradient(to right, #3B4371, #F3904F); 
+  background: #3f2b96; 
+  background: -webkit-linear-gradient(to right, #3B4371,#3f2b96);  
+  background: linear-gradient(to right, #3B4371, #3f2b96); 
   }
 
   .player
