--- a/Music.html
+++ b/Music.html
@@ -20,9 +20,9 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #108dc7;  
+  background: #a8c0ff;  
   background: #3f2b96; 
-  background: -webkit-linear-gradient(to right, #3B4371,#3f2b96);  
+  background: -webkit-linear-gradient(to right, #a8c0ff,#3f2b96);  
   background: linear-gradient(to right, #3B4371, #3f2b96); 
   }
 
