--- a/Music.html
+++ b/Music.html
@@ -20,10 +20,10 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #a8c0ff;  
+  background:#108dc7;  
   background: #3f2b96; 
-  background: -webkit-linear-gradient(to right, #a8c0ff,#3f2b96);  
-  background: linear-gradient(to right, #3B4371, #3f2b96); 
+  background: -webkit-linear-gradient(to right,#108dc7,#3f2b96);  
+  background: linear-gradient(to right,#108dc7, #3f2b96); 
   }
 
   .player
