Update Lendsay You're Beautiful.html

--- a/Lendsay You're Beautiful.html
+++ b/Lendsay You're Beautiful.html
@@ -66,10 +66,10 @@
   <body>
     <div class="player">
       <div class="imgBox">
-        <img src="Images/image--4p2trYGS-transformed.png">
+        <img src="lendsay you're beautiful.jpg">
       </div>
       <audio controls>
-       <source src="audio/The Walters -- I Love You So.mp3">
+       <source src="James Blunt - You're Beautiful (Official Music Video) [4K].mp3">
       </audio>
     </div>
   </body>
