--- a/Envelope.html
+++ b/Envelope.html
@@ -134,7 +134,7 @@ body{
                     <div class="text">
                         <strong>Kimi no Na wa</strong>
                         <p>
-                            I won't give up on her but I'm stuck between waiting her you or giving up on her. <br> But for now I guess still her til I die or maybe some mirarcle will happen.
+                            I won't give up on her but I'm stuck between waiting for her or giving up on her. <br> But for now I guess still her til I die or maybe some mirarcle will happen.
                         </p>
                     </div>
                 </div>
