--- a/Envelope.html
+++ b/Envelope.html
@@ -79,7 +79,7 @@ body{
 .envelope > .letter > .text {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: var(--txt-color);
-  text-align: left;
+  text-align: center;
   font-size: 10px;
 }
 .heart {
@@ -132,9 +132,9 @@ body{
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Kimi no Na wa</strong>
+                        <strong>A Letter Entitled For You</strong>
                         <p>
-                            I won't give up on her but I'm stuck between waiting for her or giving up on her. <br> But for now I guess still her til I die or maybe some mirarcle will happen.
+                            I won't give up on her but I'm stuck between waiting for her or giving up on her. <br> But for now I guess still her til I die or maybe some mirarcle will happen like she will love me :)
                         </p>
                     </div>
                 </div>
