--- a/Ring Ring.html
+++ b/Ring Ring.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy</title>
+    <title>Ring Ring</title>
     <style>
 
 body {
@@ -242,9 +242,19 @@ body {
 #open:checked ~  .text {
   opacity:1;
 }
+.open-text {
+    position: absolute;
+    top: 20px; 
+    left: 50%; 
+    transform: translateX(-50%);
+    color: white;
+    font-family: Arial, sans-serif;
+    font-size: 50px;
+}
 
     </style>
     <body>
+        <div class="open-text">Open the box</div>
         <div class="jewellery-box">
             <input id="open" type="checkbox">
             <label class="open" for="open"></label>
