Update Datiles, Final Activity P2.html

--- a/Datiles, Final Activity P2.html
+++ b/Datiles, Final Activity P2.html
@@ -11,7 +11,7 @@
             <h1>College Journey</h1>
             
             <div id="nav">
-                <a href="#" target="_blank" class="nav">Next Page</a>
+                <a href="" target="_blank" class="nav">Next Page</a>
                 <a href="https://github.com/N4sshh/Nasshh" target="_blank" class="nav">My Projects</a>
                 <a href="https://n4sshh.github.io/Nasshh/Datiles-Act-3-Page-3.html" target="_blank" class="nav">About Me</a>
                 <a href="https://www.facebook.com/NashEickerr" target="_blank" class="nav">Contact</a>
@@ -39,6 +39,11 @@
       <img src="https://n4sshh.github.io/Nasshh/NEW%20COF.jpg" alt="img" class="New_Circle_of_Friends">
       <h1>My New so called COF in my college journey <3<br>They may not be the best cirlce of friends I could as for but I'm thankful still for treating me like a true friend, I maybe not join them in playing valorant but valorant is not really for me I guess and our circle of friends maybe small but I'm thankful that we are true to ourself our friendship and we don't talk shit behind our backs also forging our friendship was also unexpected due to certain circumstances we forged a trio friendship that is like a brotherhood also even though we are just a trio we are not like the others that even though they are a big cirlce of friends they still talk shit behind their backs and destroy each others reputation and I'm glad that we don't do that we are keeping our friendship real like true brothers.</h1>
   </div>
+
+  <div id="Unexpected_Circle_of_Friends">
+    <img src="https://n4sshh.github.io/Nasshh/TRIOP2.jpg" alt="img" class="Unexpected_Circle_of_Friends">
+    <h1>My Unexpected so called COF in my college journey <3<br>I didn't expect them or me also to be a somehow called circle of friends with them but I really enjoy being with them I maybe not the best in socializing but they understand me being unable to socialize that well and still being nice to me and let's me still be part in the converstaion and doesn't let me be out of place just like those other friends I had and as they say An unexpected circle of friends often becomes the most cherished part of our journey, showing us that true connection transcends all differences. So as long as I live I'll cherish all of our memories that we made and appreciate those efforts they made for me.</h1>
+</div>
 
     </main>
     <div id="footer">
