--- a/Datiles, Final Activity P4.html
+++ b/Datiles, Final Activity P4.html
@@ -22,10 +22,10 @@
     <main>
       <div class="player">
         <div class="imgBox">
-            <img src="Images/lendsay you're beautiful.jpg" alt="Beautiful Image">
+            <img src="Lendsay You're Beautiful.html" alt="Beautiful Image">
         </div>
         <audio controls>
-            <source src="audio/James Blunt - You're Beautiful (Official Music Video) [4K].mp3" type="audio/mpeg">
+            <source src="James Blunt - You're Beautiful (Official Music Video) [4K].mp3" type="audio/mpeg">
         </audio>
     </div>
     </main>
