Update Datiles, Final Activity P4.html

--- a/Datiles, Final Activity P4.html
+++ b/Datiles, Final Activity P4.html
@@ -22,7 +22,7 @@
     <main>
       <div class="player">
         <div class="imgBox">
-            <img src="Lendsay You're Beautiful.html" alt="Beautiful Image">
+            <img src="lendsay you're beautiful.jpg" alt="Beautiful Image">
         </div>
         <audio controls>
             <source src="James Blunt - You're Beautiful (Official Music Video) [4K].mp3" type="audio/mpeg">
