Update Datiles, Final Activity P3.html

--- a/Datiles, Final Activity P3.html
+++ b/Datiles, Final Activity P3.html
@@ -11,7 +11,7 @@
             <h1>Memories of the Past</h1>
             
             <div id="nav">
-                <a href="" target="_blank" class="nav">Next Page</a>
+                <a href="https://n4sshh.github.io/Nasshh/Datiles,%20Final%20Activity%20P4.html" target="_blank" class="nav">Next Page</a>
                 <a href="https://github.com/N4sshh/Nasshh" target="_blank" class="nav">My Projects</a>
                 <a href="https://n4sshh.github.io/Nasshh/Datiles-Act-3-Page-3.html" target="_blank" class="nav">About Me</a>
                 <a href="https://www.facebook.com/NashEickerr" target="_blank" class="nav">Contact</a>
