Update Datiles, Final Activity P1.html

--- a/Datiles, Final Activity P1.html
+++ b/Datiles, Final Activity P1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Datiles, Final Acitivty P1</title>
+    <title>Datiles, Final Activity P1</title>
     <link rel="stylesheet" href="Datiles, Final Acitivty P1.css">
 </head>
 <body>
@@ -22,25 +22,25 @@
     <main>
         <div id="My_Dream">
             <img src="https://n4sshh.github.io/Nasshh/me%20gold%20laner.jpg" alt="Me" class="me">
-            <h1>This is me and one of my dreams is to become a pro in games such as Mobile Legends and<br>League of Legends I've been a gamer ever since I was a kid so this dream will never fade.</h1>
+            <h1>This is me and one of my dreams is to become a pro in games such as Mobile Legends and League of Legends. I've been a gamer ever since I was a kid, so this dream will never fade.</h1>
         </div>
 
         <div id="More_Info_About_Me">
-            <img src="https://n4sshh.github.io/Nasshh/ME.jpg" alt="More_Info_About_Me" class="Me_Formal">
-            <h2>This is me also but of course you can see my face, also I think this is what I'll where when I'll become a teacher one day but i'm not that really compatible in being a teacher so maybe a front end developer.</h2>
+            <img src="https://n4sshh.github.io/Nasshh/ME.jpg" alt="More Info About Me" class="Me_Formal">
+            <h2>This is me also, but of course, you can see my face. Also, I think this is what I'll wear when I become a teacher one day, but I'm not that really compatible in being a teacher so maybe a front-end developer.</h2>
         </div>
 
         <div id="Fun_Fact">
-            <img src="https://n4sshh.github.io/Nasshh/ako%20like.jpg" alt="Fun_Fact" class="labutaw">
-            <h2>Random Fun Fact do you know that my favorite shape is a square? </h2>
+            <img src="https://n4sshh.github.io/Nasshh/ako%20like.jpg" alt="Fun Fact" class="labutaw">
+            <h2>Random Fun Fact: Do you know that my favorite shape is a square?</h2>
             <div class="square"></div>
         </div>
 
     </main>
     <div id="footer">
-    <footer>
-        <h2>This project is made by Nash Eicker P. Datiles From BTVTED CP 1-A and submitted to Cristine Diane Advincula </h2>
-    </footer>
+        <footer>
+            <h2>This project is made by Nash Eicker P. Datiles from BTVTED CP 1-A and submitted to Cristine Diane Advincula</h2>
+        </footer>
     </div>
 </body>
 </html>
