--- a/Final project idea.html
+++ b/Final project idea.html
@@ -43,11 +43,11 @@
             <!-- Playlist -->
             <div class="playlist">
                 <h2>Your History Playlist</h2>
-                <ul>
-                    <li onclick="changeSong('James Blunt - You\'re Beautiful', 'VID/James Blunt - You\'re Beautiful (Official Music Video) [4K].mp4', 'audio/James Blunt - You\'re Beautiful (Official Music Video) [4K].mp3')">James Blunt - You're Beautiful</li>
-                    <li onclick="changeSong('Lady Gaga - Judas', 'VID/Lady Gaga - Judas (Official Music Video).mp4', 'audio/Lady Gaga - Judas (Official Music Video).mp3')">Lady Gaga - Judas</li>
-                    <li onclick="changeSong('Goo Goo Dolls - Iris', 'VID/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster].mp4', 'audio/Goo Goo Dolls  Iris [Official Music Video] [4K Remaster].mp3')">Goo Goo Dolls - Iris</li>
-                    <li onclick="changeSong('The Walters - I Love You So', 'VID/The Walters -- I Love You So.mp4', 'audio/The Walters -- I Love You So.mp3')">The Walters - I Love You So</li>
+               <ul>
+    <li onclick="changeSong('James Blunt - You\'re Beautiful', 'audio/James Blunt - You\'re Beautiful (Official Music Video) [4K].mp4', 'audio/James Blunt - You\'re Beautiful (Official Music Video) [4K].mp4')">James Blunt - You're Beautiful</li>
+    <li onclick="changeSong('Lady Gaga - Judas', 'audio/Lady Gaga - Judas (Official Music Video).mp4', 'audio/Lady Gaga - Judas (Official Music Video).mp4')">Lady Gaga - Judas</li>
+    <li onclick="changeSong('Goo Goo Dolls - Iris', 'audio/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster].mp4', 'audio/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster].mp4')">Goo Goo Dolls - Iris</li>
+    <li onclick="changeSong('The Walters - I Love You So', 'audio/The Walters -- I Love You So.mp4', 'audio/The Walters -- I Love You So.mp4')">The Walters - I Love You So</li>
                 </ul>
             </div>
         </main>
