Update Final project idea.html

--- a/Final project idea.html
+++ b/Final project idea.html
@@ -35,7 +35,7 @@
             <!-- Video Player -->
             <div class="videoBox">
                 <video id="video-player" autoplay muted controls>
-                    <source id="video-source" src="" type="video/mp4">
+                    <source id="video-source" src="audio/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster].mp4" type="video/mp4">
                     Your browser does not support the video element.
                 </video>
             </div>
@@ -43,11 +43,11 @@
             <!-- Playlist -->
             <div class="playlist">
                 <h2>Your History Playlist</h2>
-               <ul>
-    <li onclick="changeSong('James Blunt - You\'re Beautiful', 'audio/James Blunt - You\'re Beautiful (Official Music Video) [4K].mp4', 'audio/James Blunt - You\'re Beautiful (Official Music Video) [4K].mp4')">James Blunt - You're Beautiful</li>
-    <li onclick="changeSong('Lady Gaga - Judas', 'audio/Lady Gaga - Judas (Official Music Video).mp4', 'audio/Lady Gaga - Judas (Official Music Video).mp4')">Lady Gaga - Judas</li>
-    <li onclick="changeSong('Goo Goo Dolls - Iris', 'audio/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster].mp4', 'audio/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster].mp4')">Goo Goo Dolls - Iris</li>
-    <li onclick="changeSong('The Walters - I Love You So', 'audio/The Walters -- I Love You So.mp4', 'audio/The Walters -- I Love You So.mp4')">The Walters - I Love You So</li>
+                <ul>
+                    <li onclick="changeSong('James Blunt - You\'re Beautiful', 'audio/James Blunt - You\'re Beautiful (Official Music Video) [4K].mp4', 'audio/James Blunt - You\'re Beautiful (Official Music Video) [4K].mp4')">James Blunt - You're Beautiful</li>
+                    <li onclick="changeSong('Lady Gaga - Judas', 'audio/Lady Gaga - Judas (Official Music Video).mp4', 'audio/Lady Gaga - Judas (Official Music Video).mp4')">Lady Gaga - Judas</li>
+                    <li onclick="changeSong('Goo Goo Dolls - Iris', 'audio/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster].mp4', 'audio/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster].mp4')">Goo Goo Dolls - Iris</li>
+                    <li onclick="changeSong('The Walters - I Love You So', 'audio/The Walters -- I Love You So.mp4', 'audio/The Walters -- I Love You So.mp4')">The Walters - I Love You So</li>
                 </ul>
             </div>
         </main>
