--- a/Final project idea.html
+++ b/Final project idea.html
@@ -44,22 +44,22 @@
             <div class="playlist">
                 <h2>Your History Playlist</h2>
                 <ul>
-                    <li onclick="changeSong('James Blunt - You\'re Beautiful', 'audio/James Blunt - You\'re Beautiful (Official Music Video) [4K].mp4', 'audio/James Blunt - You\'re Beautiful (Official Music Video) [4K].mp4')">James Blunt - You're Beautiful</li>
-                    <li onclick="changeSong('Lady Gaga - Judas', 'audio/Lady Gaga - Judas (Official Music Video).mp4', 'audio/Lady Gaga - Judas (Official Music Video).mp4')">Lady Gaga - Judas</li>
-                    <li onclick="changeSong('Goo Goo Dolls - Iris', 'audio/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster].mp4', 'audio/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster].mp4')">Goo Goo Dolls - Iris</li>
-                    <li onclick="changeSong('The Walters - I Love You So', 'audio/The Walters -- I Love You So.mp4', 'audio/The Walters -- I Love You So.mp4')">The Walters - I Love You So</li>
+                    <li onclick="changeSong('audio/James Blunt - You\'re Beautiful (Official Music Video) [4K].mp4')">James Blunt - You're Beautiful</li>
+                    <li onclick="changeSong('audio/Lady Gaga - Judas (Official Music Video).mp4')">Lady Gaga - Judas</li>
+                    <li onclick="changeSong('audio/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster].mp4')">Goo Goo Dolls - Iris</li>
+                    <li onclick="changeSong('audio/The Walters -- I Love You So.mp4')">The Walters - I Love You So</li>
                 </ul>
             </div>
         </main>
     </div>
 
     <script>
-        function changeSong(songName, videoFile, songFile) {
+        function changeSong(videoFile) {
             const videoPlayer = document.getElementById('video-player');
             const videoSource = document.getElementById('video-source');
-            videoSource.src = videoFile;
-            videoPlayer.load();
-            videoPlayer.play();
+            videoSource.src = videoFile; // Update the video source
+            videoPlayer.load(); // Reload the video player
+            videoPlayer.play(); // Play the new video
         }
     </script>
 </body>
