--- a/bruno.html
+++ b/bruno.html
@@ -20,7 +20,7 @@
         <div class="video-grid">
             <div class="video-item">
                 <video controls>
-                    <source id="video-source" src="Bruno Mars MP4/Mark Ronson - Uptown Funk (Official Video) ft. Bruno Mars.mp4" type="video/mp4">
+                    <source src="Mark Ronson - Uptown Funk (Official Video) ft. Bruno Mars.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Uptown Funk</h4>
@@ -28,7 +28,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source id="video-source" src="Bruno Mars MP4/Bruno Mars - It Will Rain (Official Music Video).mp4" type="video/mp4">
+                    <source src="Bruno Mars - It Will Rain (Official Music Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>It Will Rain</h4>
@@ -36,7 +36,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source id="video-source" src="Bruno Mars MP4/Bruno Mars - Locked Out Of Heaven (Official Music Video).mp4" type="video/mp4">
+                    <source src="Bruno Mars - Locked Out Of Heaven (Official Music Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Locked Out Of Heaven</h4>
@@ -44,7 +44,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Bruno Mars MP4/Bruno Mars - Grenade (Official Music Video).mp4" type="video/mp4">
+                    <source src="Bruno Mars - Grenade (Official Music Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Grenade</h4>
@@ -52,7 +52,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Bruno Mars MP4/Bruno Mars - When I Was Your Man (Official Music Video).mp4" type="video/mp4">
+                    <source src="Bruno Mars - When I Was Your Man (Official Music Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>When I Was Your Man</h4>
@@ -60,7 +60,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source id="video-source" src="Bruno Mars MP4/Bruno Mars - Just The Way You Are (Official Music Video).mp4" type="video/mp4">
+                    <source src="Bruno Mars - Just The Way You Are (Official Music Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Just The Way You Are</h4>
