--- a/pop.html
+++ b/pop.html
@@ -41,7 +41,7 @@
                 <img src="Pop%20Music%20Artists%20icon/Ed%20Sheeran.jpg" alt="Ed Sheeran" class="artist-photo">
                 <h3>Ed Sheeran</h3>
                 <p class="artist-bio">Ed Sheeran is an English singer-songwriter whose blend of pop, folk, and R&B has earned him worldwide acclaim.</p>
-                <button class="view-songs"><a href="ed%20sheeran.html">View Top Songs</a></button>
+                <button class="view-songs"><a href="Ed%20Sheeran.html">View Top Songs</a></button>
             </div>
 
             <!-- Adele -->
@@ -57,7 +57,7 @@
                 <img src="Pop%20Music%20Artists%20icon/Lady%20Gaga.jpg" alt="Lady Gaga" class="artist-photo">
                 <h3>Lady Gaga</h3>
                 <p class="artist-bio">Lady Gaga is an American singer, songwriter, and actress known for her unconventionality, provocativeness, and visual experimentation.</p>
-                <button class="view-songs"><a href="lady%20gaga.html">View Top Songs</a></button>
+                <button class="view-songs"><a href="ladygaga.html">View Top Songs</a></button>
             </div>
 
             <!-- LANY -->
