--- a/coldplay.html
+++ b/coldplay.html
@@ -35,7 +35,7 @@
         <div class="video-grid">
             <div class="video-item">
                 <video controls>
-                    <source src="Coldplay%20MP4/Coldplay%20&%20The%20Chainsmokers%20-%20Something%20Just%20Like%20This%20[Tokyo%20Remix]%20(Official%20Audio).mp4" type="video/mp4">
+                    <source src="Nasshh/Coldplay & The Chainsmokers - Something Just Like This [Tokyo Remix] (Official Audio).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Something Just Like This</h4>
@@ -43,7 +43,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Coldplay%20MP4/Coldplay%20-%20A%20Sky%20Full%20Of%20Stars%20(Official%20Video).mp4" type="video/mp4">
+                    <source src="Nasshh/Coldplay - A Sky Full Of Stars (Official Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>A Sky Full of Stars</h4>
@@ -51,7 +51,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Coldplay%20MP4/Coldplay%20-%20Fix%20You%20(Official%20Video).mp4" type="video/mp4">
+                    <source src="Nasshh/Coldplay - Fix You (Official Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Fix You</h4>
@@ -59,7 +59,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Coldplay%20MP4/Coldplay%20-%20Hymn%20For%20The%20Weekend%20(Official%20Video).mp4" type="video/mp4">
+                    <source src="Nasshh/Coldplay - Hymn For The Weekend (Official Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Hymn For The Weekend</h4>
@@ -67,7 +67,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Coldplay%20MP4/Coldplay%20-%20The%20Scientist%20(Official%204K%20Video).mp4" type="video/mp4">
+                    <source src="Nasshh/Coldplay - The Scientist (Official 4K Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>The Scientist</h4>
@@ -75,7 +75,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Coldplay%20MP4/Coldplay%20-%20Yellow%20(Official%20Video).mp4" type="video/mp4">
+                    <source src="Nasshh/Coldplay - Yellow (Official Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Yellow</h4>
