--- a/Random/gamepage.html
+++ b/Random/gamepage.html
@@ -8,8 +8,8 @@
     <!-- Adding the favicon -->
     <link rel="icon" href="https://n4sshh.github.io/Nasshh/pakyu.jpg" type="image/jpeg">
 
-    <!-- Update the link to your CSS file (assuming it's in the 'Random' folder) -->
-    <link rel="stylesheet" href="Random/style.css">
+    <!-- Use the full URL for the CSS file -->
+    <link rel="stylesheet" href="https://n4sshh.github.io/Nasshh/Random/style.css">
 </head>
 <body>
     <div class="game-container">
@@ -29,7 +29,7 @@
         <button id="next-button" onclick="nextQuestion()" disabled>Next Question</button>
     </div>
 
-    <!-- Update the JS file path (assuming it's in the 'Random' folder) -->
-    <script src="Random/game.js"></script>
+    <!-- Use the full URL for the JS file -->
+    <script src="https://n4sshh.github.io/Nasshh/Random/game.js"></script>
 </body>
 </html>
