--- a/Random/gamepage.html
+++ b/Random/gamepage.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Dev Showdown Game</title>
-    
-    <!-- Adding the favicon -->
     <link rel="icon" href="https://n4sshh.github.io/Nasshh/pakyu.jpg" type="image/jpeg">
-
-    <!-- Use the full URL for the CSS file -->
-    <link rel="stylesheet" href="https://n4sshh.github.io/Nasshh/Random/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="game-container">
@@ -24,12 +20,13 @@
             <ul id="answer-options">
                 <!-- Answer options will go here -->
             </ul>
+            <!-- Display correct answer -->
+            <div id="result"></div>
         </div>
 
         <button id="next-button" onclick="nextQuestion()" disabled>Next Question</button>
     </div>
 
-    <!-- Use the full URL for the JS file -->
-    <script src="https://n4sshh.github.io/Nasshh/Random/game.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
